--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,9 +1,9 @@
 name: GAB'S CI/CD PLS WORK
 
-on: 
+on:
   push:
     branches:
-      -'release/v*'
+      - "release/v[1-9]+.[0-9]+"
 
 jobs:
   Plswork:
