--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
   Plswork:
     runs-on: ubuntu-latest
-    if: "!StartsWith(github.event.head_commit.message, '#NORUN')"
+    if: StartsWith(github.event.head_commit.message, '#NORUN') != true
 
     steps:
       - name: Checkout
@@ -18,8 +18,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
          node-version: 16
-
-      - name: Install Railway cli
+      
+      - name: Install Railway
         run: npm i -g @railway/cli
 
       - name: Deploy to Railway
