testing slack webhook

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,3 +26,66 @@ jobs:
         run: railway up
         env:
           RALWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+
+      - name: Send Slack Notification
+              id: slack
+              uses: slackapi/slack-github-action@v1.23.0
+              with:
+                payload: |
+                  {
+                    "blocks": [
+                      {
+                        "type": "header",
+                        "text": {
+                          "type": "plain_text",
+                          "text": "G.DipSA 56 CI/CD Submission",
+                          "emoji": true
+                        }
+                      },
+                      {
+                        "type": "section",
+                        "fields": [
+                          {
+                            "type": "mrkdwn",
+                            "text": "*Name:* Gabriel Pik Liang Marini"
+                          },
+                          {
+                            "type": "mrkdwn",
+                            "text": "*Email: E1114406@u.nus.edu*"
+                          },
+                          {
+                            "type": "mrkdwn",
+                            "text": "*Metriculation:* A0112995X"
+                          },
+                          {
+                            "type": "mrkdwn",
+                            "text": "*Repository:* ${{ https://github.com/Gitgabgap/dov-bear-CICD }}"
+                          },
+                          {
+                            "type": "mrkdwn",
+                            "text": "${{ secrets.SECRET_DEPLOYMENT_URL }}"
+                          }
+                        ]
+                      },
+                      {
+                        "type": "section",
+                        "text": {
+                          "type": "plain_text",
+                          "text": " "
+                        },
+                        "accessory": {
+                          "type": "button",
+                          "text": {
+                            "type": "plain_text",
+                            "text": "GO"
+                          },
+                          "url": "${{ secrets.RAILWAY_URL }}"
+                        }
+                      }
+                    ]
+                  }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.TEST_SLACK_WEBHOOK }}
+          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+            
+            
