THIS TIME IT WILL WORK - Slack Test Submission Webhook

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Deploy to Railway
         run: railway up
         env:
-          RALWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
 
       - name: Send Slack Notification
         id: slack
@@ -38,7 +38,7 @@ jobs:
                 "type": "header",
                 "text": {
                   "type": "plain_text",
-                  "text": "G.DipSA 56 CI/CD Submission",
+                  "text": "DipSA 56 CI/CD Submission",
                   "emoji": true
                 }
               },
