--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,7 +23,7 @@ jobs:
         run: npm i -g @railway/cli
 
       - name: Deploy to Railway
-        run: railway up
+        run: railway up --service dov-bear-CICD
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
 
